    from `name` if the id_prefix setting is non-empty.

  - ``Node.traverse()`` returns an iterator instead of a list.

* docutils/parsers/rst/directives/html.py

  - Removed. (Meta directive moved to ``misc.py``.)

* docutils/parsers/rst/directives/misc.py

  - `Meta` directive class (moved from html.py) inserts `meta`
    (instead of `pending`) nodes.

* docutils/tools/math/math2html, docutils/writers/html5_polyglot/math.css

  - Fix bug #244 Wrong subscript/superscript order with
    ``--math-output=HTML``.
  - Don't use <tt> element (deprecated in HTML5).
  - Support commands ``\Bbbk`` and ``operatorname``.

* docutils/utils/__init__.py

  - Removed ``unique_combinations`` (obsoleted by ``itertools.combinations``).

* docutils/utils/latex2mathml.py

  - Major update (fixes and support for additional commands and symbols).
    Fixes bug #407.

* docutils/writers/_html_base.py

  - Write footnote brackets and field term colons to HTML, so that
    they are present also without CSS and when copying text.
    Adapt ``minimal.css``.

  - Use semantic tag <aside> for footnote text and citations.

  - Do not add "compound-first", "compound-middle", or "compound-last" to
    elements nested in a compound (no change with `html4css1`).

  - Removed attribute ``HTMLTranslator.topic_classes``


* docutils/writers/latex2e/__init__.py

  - The setting `legacy_class_functions`_ now defaults to "False".
    Adapt stylesheets modifying ``\DUadmonition`` and/or ``\DUtitle``.

  - Apply patch #181 "Fix tocdepth when chapter/part in use" by
    John Thorvald Wodder II.

* docutils/writers/latex2e/docutils.sty

  - Fix excessive padding above sidebar titles.

* docutils/writers/pseudoxml.py:

  - Fix option "detailled" under Python 2.7.

* docutils/writers/s5_html/themes/default

  - Remove IE 6 compatibility workarounds ``iepngfix.htc`` and
    ``blank.gif`` (fixes bug #169).


Release 0.17.1 (2021-04-16)
===========================

* docutils/utils/math/latex2mathml.py
