@@ -68,11 +68,11 @@ desires.</dd>
 <p>Like this.</p>
 </dd>
 </dl>
-<div class="dedication topic">
+<div class="topic dedication" role="doc-dedication">
 <p class="topic-title">Dedication</p>
 <p>For Docutils users &amp; co-developers.</p>
 </div>
-<div class="abstract topic">
+<div class="topic abstract" role="doc-abstract">
 <p class="topic-title">Abstract</p>
 <p>This is a test document, containing at least one example of each
 reStructuredText construct.</p>
@@ -82,7 +82,7 @@ transforms to after the document title, subtitle, and docinfo. -->
 <!-- Above is the document title, and below is the subtitle.
 They are transformed from section titles after parsing. -->
 <!-- bibliographic fields (which also require a transform): -->
-<div class="contents topic" id="table-of-contents">
+<nav class="contents" id="table-of-contents" role="doc-toc">
 <p class="topic-title">Table of Contents</p>
 <ul class="auto-toc simple">
 <li><p><a class="reference internal" href="#structural-elements" id="toc-entry-1"><span class="sectnum">1</span> Structural Elements</a></p>
@@ -159,7 +159,7 @@ They are transformed from section titles after parsing. -->
 </li>
 <li><p><a class="reference internal" href="#error-handling" id="toc-entry-52"><span class="sectnum">4</span> Error Handling</a></p></li>
 </ul>
-</div>
+</nav>
 <section id="structural-elements">
 <h2><a class="toc-backref" href="#toc-entry-1"><span class="sectnum">1</span> Structural Elements</a></h2>
 <section id="section-title">
@@ -546,7 +546,7 @@ this: <a href="#system-message-5"><span class="problematic" id="problematic-3">`
 </section>
 <section id="directives">
 <h3><a class="toc-backref" href="#toc-entry-22"><span class="sectnum">2.14</span> Directives</a></h3>
-<div class="contents local topic" id="contents">
+<nav class="contents local" id="contents">
 <ul class="auto-toc simple">
 <li><p><a class="reference internal" href="#document-parts" id="toc-entry-53"><span class="sectnum">2.14.1</span> Document Parts</a></p></li>
 <li><p><a class="reference internal" href="#images-and-figures" id="toc-entry-54"><span class="sectnum">2.14.2</span> Images and Figures</a></p></li>
@@ -560,7 +560,7 @@ this: <a href="#system-message-5"><span class="problematic" id="problematic-3">`
 <li><p><a class="reference internal" href="#code" id="toc-entry-62"><span class="sectnum">2.14.10</span> Code</a></p></li>
 <li><p><a class="reference internal" href="#meta" id="toc-entry-63"><span class="sectnum">2.14.11</span> Meta</a></p></li>
 </ul>
-</div>
+</nav>
 <p>These are just a sample of the many reStructuredText Directives.  For
 others, please see <a class="reference external" href="https://docutils.sourceforge.io/docs/ref/rst/directives.html">reStructuredText Directives</a> <a class="footnote-reference brackets" href="#footnote-13" id="footnote-reference-27"><span class="fn-bracket">[</span>13<span class="fn-bracket">]</span></a>.</p>
 <section id="document-parts">
@@ -763,27 +763,27 @@ writer/backend).</p>
 </section>
 <section id="admonitions">
 <h4><a class="toc-backref" href="#toc-entry-56"><span class="sectnum">2.14.4</span> Admonitions</a></h4>
-<div class="admonition attention">
+<aside class="admonition attention">
 <p class="admonition-title">Attention!</p>
 <p>Directives at large.</p>
-</div>
-<div class="admonition caution">
+</aside>
+<aside class="admonition caution">
 <p class="admonition-title">Caution!</p>
 <p>Don't take any wooden nickels.</p>
-</div>
-<div class="admonition danger">
+</aside>
+<aside class="admonition danger">
 <p class="admonition-title">!DANGER!</p>
 <p>Mad scientist at work!</p>
-</div>
-<div class="admonition error">
+</aside>
+<aside class="admonition error">
 <p class="admonition-title">Error</p>
 <p>Does not compute.</p>
-</div>
-<div class="admonition hint">
+</aside>
+<aside class="admonition hint">
 <p class="admonition-title">Hint</p>
 <p>It's bigger than a bread box.</p>
-</div>
-<div class="admonition important">
+</aside>
+<aside class="admonition important">
 <p class="admonition-title">Important</p>
 <ul class="simple">
 <li><p>Wash behind your ears.</p></li>
@@ -791,24 +791,24 @@ writer/backend).</p>
 <li><p>Call your mother.</p></li>
 <li><p>Back up your data.</p></li>
 </ul>
-</div>
-<div class="admonition note">
+</aside>
+<aside class="admonition note">
 <p class="admonition-title">Note</p>
 <p>This is a note.</p>
-</div>
-<div class="admonition tip">
+</aside>
+<aside class="admonition tip">
 <p class="admonition-title">Tip</p>
 <p>15% if the service is good.</p>
-</div>
-<div class="admonition warning">
+</aside>
+<aside class="admonition warning">
 <p class="admonition-title">Warning</p>
 <p>Strong prose may provoke extreme mental exertion.
 Reader discretion is strongly advised.</p>
-</div>
-<div class="admonition admonition-and-by-the-way">
+</aside>
+<aside class="admonition admonition-and-by-the-way">
 <p class="admonition-title">And, by the way...</p>
 <p>You can make up your own admonition too.</p>
-</div>
+</aside>
 </section>
 <section id="topics-sidebars-and-rubrics">
 <h4><a class="toc-backref" href="#toc-entry-57"><span class="sectnum">2.14.5</span> Topics, Sidebars, and Rubrics</a></h4>
@@ -824,10 +824,10 @@ background or font color.</p>
 </aside>
 <p>A <em>topic</em> is like a block quote with a title, or a self-contained section
 with no subsections.</p>
-<div class="topic">
+<aside class="topic">
 <p class="topic-title">Topic Title</p>
 <p>This is a topic.</p>
-</div>
+</aside>
 <p>A <em>rubric</em> is like an informal heading that doesn't correspond to the
 document's structure. It is typically highlighted in red (hence the name).</p>
 <p class="rubric">This is a rubric</p>
@@ -994,10 +994,10 @@ by</p>
 <p>a paragraph followed by a comment,</p>
 <!-- this is a comment -->
 <p>a paragraph, a</p>
-<div class="admonition note">
+<aside class="admonition note">
 <p class="admonition-title">Note</p>
 <p>with content</p>
-</div>
+</aside>
 <p>and the final paragraph of the compound 7.</p>
 </div>
 </section>
@@ -1779,26 +1779,26 @@ section, &quot;Docutils System Messages&quot;:</p>
 </section>
 <section class="system-messages">
 <h2>Docutils System Messages</h2>
-<div class="system-message" id="system-message-1">
+<aside class="system-message" id="system-message-1">
 <p class="system-message-title">System Message: ERROR/3 (<span class="docutils literal">functional/input/data/standard.txt</span>, line 99); <em><a href="#problematic-1">backlink</a></em></p>
 <p>Undefined substitution referenced: &quot;problematic&quot;.</p>
-</div>
-<div class="system-message" id="system-message-2">
+</aside>
+<aside class="system-message" id="system-message-2">
 <p class="system-message-title">System Message: ERROR/3 (<span class="docutils literal">functional/input/data/standard.txt</span>, line 387); <em><a href="#footnote-reference-8">backlink</a></em></p>
 <p>Unknown target name: &quot;5&quot;.</p>
-</div>
-<div class="system-message" id="system-message-3">
+</aside>
+<aside class="system-message" id="system-message-3">
 <p class="system-message-title">System Message: ERROR/3 (<span class="docutils literal">functional/input/data/standard.txt</span>, line 396); <em><a href="#citation-reference-3">backlink</a></em></p>
 <p>Unknown target name: &quot;nonexistent&quot;.</p>
-</div>
-<div class="system-message" id="system-message-4">
+</aside>
+<aside class="system-message" id="system-message-4">
 <p class="system-message-title">System Message: ERROR/3 (<span class="docutils literal">functional/input/data/standard.txt</span>, line 423); <em><a href="#problematic-2">backlink</a></em></p>
 <p>Unknown target name: &quot;hyperlink reference without a target&quot;.</p>
-</div>
-<div class="system-message" id="system-message-5">
+</aside>
+<aside class="system-message" id="system-message-5">
 <p class="system-message-title">System Message: ERROR/3 (<span class="docutils literal">functional/input/data/standard.txt</span>, line 436); <em><a href="#problematic-3">backlink</a></em></p>
 <p>Duplicate target name, cannot be used as a unique reference: &quot;duplicate target names&quot;.</p>
-</div>
+</aside>
 </section>
 </main>
 <footer>
